# rust_twitter_bot_lib

./: .gitignore  Cargo.toml  README.md
examples/: favorite.rs  simple-tweet.rs  upload_tweet.rs
src/: lib.rs  tweet_structure.rs
