[package]
name = "rust_twitter_bot_lib"
version = "0.1.0"
authors = ["Lancelot OWCZARCZAK <lowczarc@student.42.fr>"]
edition = "2018"

[dependencies]
oauthcli = { git = "https://github.com/lowczarc/rust-oauthcli" }
url = "1.7.2"
reqwest = "0.9.16"
serde = { version = "1.0.90",  features = ["derive"] }
