[package]
name = "rust_twitter_bot_lib"
version = "0.1.1"
authors = ["Lancelot OWCZARCZAK <lowczarc@student.42.fr>"]
edition = "2018"
description = "A Rust lib for Twitter Bot creation "
license = "MIT"
repository = "https://github.com/lowczarc/rust_twitter_bot_lib"
readme = "README.md"

[dependencies]
oauthcli = "1.0.4"
url = "1.7.2"
reqwest = "0.9.16"
serde = { version = "1.0.90",  features = ["derive"] }
